# IguanaLang

./: .gitignore  CMakeLists.txt  IguanaTODO.txt  LICENSE  README.md  main.c  mainframe.ig  test.c  test.h  test.i  test.ig
bakalauro_failai/: IguanaFlow.drawio
iguanaTestFiles/: function.ig  main.i  mainframe.ig  stdio.i  test.c  test.h  test.i  test.iguana
iguanaTestFiles/hmm/: mainframe.c  mainframe.h  mainframe.ig  test.i
queue/: queue.h
utility/: main.c  main.h
utility/compiler/: compiler.c  compiler.h
utility/file_manip/: files.c  files.h
utility/file_reader/: file_reader.c  file_reader.h
utility/generator/: arch_specific.h  config_generator.h  csyntax_database.h  first_headers.h  generator.c  generator.h  lookup.h
utility/generator/bit_arithmetic/: fit_arithmetic.h  plt_arithmetic.h
utility/global_config/: global_config.h
utility/hash/: hash.c  hash.h
utility/hash/random/: random.c  random.h
utility/hashmap/: hashmap.c  hashmap.h
utility/hashmap/prev_hashmap_unused__/: hashmap.c  hashmap.h
utility/logger/: colors.h  logger.c  logger.h
utility/misc/: arch_specific.h  helper_macros.h  platform_specific.h  safety_macros.h  typedefs.h
utility/parser/: parser.c  parser.h
utility/parser/parser_utilities/: compiler_messages.c  compiler_messages.h  global_parser_utility.c  global_parser_utility.h
utility/parser/parser_utilities/post_parsing_utility/: bitfit.c  bitfit.h
utility/parser/parser_utilities/smaller_parsers/: method_parser.c  method_parsers.h
utility/parser/parser_utilities/smaller_parsers/body_parser/: body_parser.c  body_parser.h
utility/parser/parser_utilities/smaller_parsers/method_parser/: method_parser.c  method_parsers.h
utility/parser/parser_utilities/smaller_parsers/var_parser/: var_parser.c  var_parser.h
utility/parser/structures/class/: class.h
utility/parser/structures/class/class_scope/: class_scope.h
utility/parser/structures/expression/: expressions.c  expressions.h
utility/parser/structures/expression/expression_list/: constant_value.h  method_call.h  single_operator.h
utility/parser/structures/fileobject/: fileobject.h
utility/parser/structures/import_object/: import_object.c  import_object.h
utility/parser/structures/main_frame/: main_frame.c  main_frame.h
utility/parser/structures/method/: method.h
utility/parser/structures/method/method_scope/: local_scope.h
utility/parser/structures/object_type/: object_type.c  object_type.h
utility/parser/structures/pattern/: pattern.h
utility/parser/structures/variable/: variable.h
utility/queue/: queue.c  queue.h
utility/separator/: separator.c  separator.h
utility/stack/: dstack.c  dstack.h  stack.c  stack.h
utility/symbol_table/: symbol_table.c  symbol_table.h
utility/tokenizer/: tokenizer.c  tokenizer.h
utility/tokenizer/token/: token.h
utility/tokenizer/token/token_database/: token_bindings.h  token_types.h
utility/vector/: vector.c  vector.h
